Primo esempio di interfaccia

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <div id="map" class="map"></div>
-  <script type="module" src="/src/main.ts"></script>
+  <script type="module" src="/src/main.tsx"></script>
   <!-- <div id="panel"></div> -->
 </body>
 
