--- a/index.html
+++ b/index.html
@@ -5,20 +5,18 @@
   <title>BPEnv Modeler</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="node_modules/ol/ol.css">
   <style>
-    .map {
-      width: 100%;
-      height: 100vh;
+    body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
     }
   </style>
 </head>
 
 <body>
-  <div id="map" class="map"></div>
   <script type="module" src="/src/main.tsx"></script>
-  <!-- <div id="panel"></div> -->
+  <div id="bpenv-container"></div>
 </body>
 
 </html>
